--- a/index.html
+++ b/index.html
@@ -52,7 +52,9 @@
   </div>
 </div>
 
-<h1 style="font-size:2.5em; letter-spacing: 2px; margin: 0px 200px;"><br>The <i>focal point</i> of NYU Abu Dhabi.<br><br><br></h1>
+<h1 style="font-size:2.5em; letter-spacing: 2px; margin: 0px 200px;"><br>The <i>focal point</i> of NYU Abu Dhabi.<br></h1>
+
+<h1 style="font-size:2em; letter-spacing: 1.5px; margin: 0px 200px;"><br>Video shot and edited by Seo Yoon (Ian) Lee and Saeed Lootah.<br><br><br></h1>
 
 </body>
 </HTML>
