--- a/index.html
+++ b/index.html
@@ -7,68 +7,54 @@
 <body>
 
 <ul>
+  <li style = "float: left; display: block; background-color: white; width: 15%;"><a href="https://nyuad.nyu.edu/"><img style = "margin-left: auto; margin-right: auto; width: 85%;" src= "schoolLogo.png" alt="logo"></a></li>
 	<li style = "float: left; display: block; color: white; text-align: center;
-	padding: 14px 16px; text-decoration: none;">CHANNEL SYLPH</li>
-	<li><a href = "contact.html"> Contact </a>
-	<li><a href = "about.html"> About </a>
-	<li><a href = "programs.html"> Programs </a>
+	padding: 14px 16px; text-decoration: none;">Campus Center</li>
+	<li><a href = "third.html"> 3 </a>
+    <li><a href = "second.html"> 2 </a>
+	<li><a href = "first.html"> 1 </a>
+	<li><a href = "ground.html"> G </a>
 	<li><a class="active" href="index.html">Home</a></li>
 </ul>
-
 
 <h1>
 &nbsp; <br>
 &nbsp;
 </h1>
 
-<h1 style="font-size:4em; letter-spacing: 7px;">Welcome To<br>
-<span class="emph">CHANNEL SYLPH</span></h1>
+<h1 style="font-size:4em; letter-spacing: 3px;">Welcome to the Campus Center!</h1>
 
-<h1 style="font-size:3.5em; letter-spacing: 4px;"><u>Our Current Programs</u></h1>
+<div class="iframe-container">
+  <iframe class="resp-iframe" src="https://www.youtube.com/embed/tMplAGGQILs?si=ov_JOco6juR1Xw0M" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+  <img class="patternBlock" src="torchBlock.png" alt="Pattern Block">
+</div>
 
-<h1 style="font-size:3em; letter-spacing: 3.5px;">Click on a program to <span class="emph">experience</span> it.</h1>
+<h1 style="font-size:2.5em; letter-spacing: 2px;"><br>The Campus Center is the central hub of the NYUAD campus.<br></h1>
+
+<h1 style="font-size:2.5em; letter-spacing: 2px; margin: 0px 200px"> The building serves as a gathering point for the community and houses a range of spaces for student life and administration.<br><br>This includes various offices, meeting rooms, study spaces, dining options, and athletic facilities.<br><br>Select a floor to go to!</h1>
 
 <div class="row">
   <div class="column">
-    <img class="thumb" src="30mmfThumb.png" alt="30MMF Thumbnail">
-        <div>
-        	<a href="https://syl596.github.io/CL30MMFWebsite/"><img class="effect" src="tvBlur.gif" alt="Blur Effect" style="top: 39.5px; left: 60px;"></a>
-        </div>
-        <figcaption>NYUAD Campus Center Explorer</figcaption>
+    <a href="ground.html"><img class="preview" src="gImages/G1.jpg" alt="Ground 1"></a>      
+    <figcaption>Ground</figcaption>
   </div>
   <div class="column">
-    <img class="thumb" src="comicThumb.png" alt="Comic Thumbnail">
-    	<div>
-    		<a href="https://ayushpandey.com.np/comic-project/"><img class="effect" src="tvBlur.gif" alt="Blur Effect" style="top: 39.5px; left: 60px;"></a>
-    	</div>
-    	<figcaption>CATSTRONAUT: A Space Odyssey</figcaption>
+    <a href="first.html"><img class="preview" src="oImages/O1.jpg" alt="One 1"></a>      
+    <figcaption>1F</figcaption>
   </div>
   <div class="column">
-    <img class="thumb" src="audioThumb.png" alt="Audio Thumbnail">
-    	<div>
-    		<a href="https://vayer88.github.io/Soundscape/intro.html"><img class="effect" src="tvBlur.gif" alt="Blur Effect" style="top: 39.5px; left: 60px;"></a>
-    	</div>
-    	<figcaption>Fly 2 D2</figcaption>
+    <a href="second.html"><img class="preview" src="tImages/T1.jpg" alt="Two 1"></a>      
+    <figcaption>2F</figcaption>
   </div>
   <div class="column">
-  	<img class="thumb" src="videoThumb.png" alt="Video Thumbnail">
-  		<div>
-  			<a href="https://theviision.github.io/video_assignment.github.io/"><img class="effect" src="tvBlur.gif" alt="Blur Effect" style="top: 39.5px; left: 60px;"></a>
-  		</div>
-  		<figcaption>NYUAD Flood Survival Guide</figcaption>
+    <a href="third.html"><img class="preview" src="thImages/Th1.jpg" alt="Three 1"></a>      
+    <figcaption>3F</figcaption>
   </div>
 </div>
 
-<h1 style="font-size:2em; letter-spacing: 2px;">
-	You can read more about each program in the <span class="emph">Programs</span> page.<br><br>
-</h1>
+<h1 style="font-size:2.5em; letter-spacing: 2px; margin: 0px 200px;"><br>The <i>focal point</i> of NYU Abu Dhabi.<br><br></h1>
 
-<hr>
-
-<h1 style="font-size:3.5em; letter-spacing: 4px; line-height: 1.4;">
-Our search for sylphs is led by<br>
-<span class="emph"> Seo Yoon (Ian) Lee</span>.<br>
-</h1>
+<h1 style="font-size:2em; letter-spacing: 1.5px; margin: 0px 200px; line-height: 1.5;">Website built by Seo Yoon (Ian) Lee.<br>Video shot and edited with Saeed Lootah.<br><br><br></h1>
 
 </body>
 </HTML>
